k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-create-order
spec:
  selector:
    app: ms-create-order
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
