k8s/allows.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: default
spec:
  selector:
    matchLabels:
      app: ms-create-order
  rules:
    - {}
